pressa-tui/tests/snapshots/editor_snapshots__frame_a_new_record_blank.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &new_post()).backend()"
---
"┌ pressa › Posts › New ────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    —                                                    │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Status *        ‹ — ›                                  │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
