pressa-tui/tests/snapshots/editor_snapshots__frame_b_a_save_the_service_refused.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &refused()).backend()"
---
"┌ pressa › Posts › New ────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    —                                                    │"
"│ > Posts            │  ⚠ required                                             │"
"│                    │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    —                                                    │"
"│                    │  ⚠ required                                             │"
"│                    │                                                         │"
"│                    │  Status *        ‹ — ›                                  │"
"│                    │  ⚠ required                                             │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    —                                                    │"
"│                    │                                               ↓ 3 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│ 3 fields need attention                                                      │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
