pressa-tui/tests/snapshots/editor_snapshots__frame_c_typing_into_a_field.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts › New ────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    Hello▌                                               │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Status *        ‹ — ›                                  │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Enter Done   Esc Cancel                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
