pressa-tui/tests/snapshots/editor_snapshots__frame_d_filled_dirty_focus_moved_on.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &filled()).backend()"
---
"┌ pressa › Posts › Hello world ───────────────────────── ● unsaved · Ctrl+S ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  Title *                                                │"
"│                    │    Hello world                                          │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    hello-world                                          │"
"│                    │                                                         │"
"│                    │  Status *        ‹ published ›                          │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │ ▸Views                                                  │"
"│                    │    42                                                   │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
