pressa-tui/tests/snapshots/editor_snapshots__frame_e_editing_a_stored_record.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &edit_post()).backend()"
---
"┌ pressa › Posts › Hello world ────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    Hello world                                          │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    hello-world                                          │"
"│                    │                                                         │"
"│                    │  Status *        ‹ published ›                          │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    42                                                   │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
