pressa-tui/tests/snapshots/editor_snapshots__frame_f_a_save_that_failed_for_another_reason.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts › Hello world ───────────────────────── ● unsaved · Ctrl+S ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    Hello world                                          │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    hello-world                                          │"
"│                    │                                                         │"
"│                    │  Status *        ‹ published ›                          │"
"│                    │                                                         │"
"│                    │  Content                                                │"
"│                    │    —                                                    │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    42                                                   │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│ ⚠ database error: disk I/O error                                             │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
