pressa-tui/tests/snapshots/editor_snapshots__frame_g_a_focused_textarea_being_typed_into.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &typing_content()).backend()"
---
"┌ pressa › Posts › Hello world ───────────────────────── ● unsaved · Ctrl+S ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  Title *                                                │"
"│                    │    Hello world                                          │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    hello-world                                          │"
"│                    │                                                         │"
"│                    │  Status *        ‹ published ›                          │"
"│                    │                                                         │"
"│                    │ ▸Content                                                │"
"│                    │    First line                                           │"
"│                    │    second line▌                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    42                                         ↓ 3 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Done   Enter Newline   Esc Cancel                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
