pressa-tui/tests/snapshots/editor_snapshots__frame_h_all_seven_field_types_in_another_collection.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Entries › Release notes ────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    Release notes                                        │"
"│ > Entries          │                                                         │"
"│                    │  Status *        ‹ published ›                          │"
"│                    │                                                         │"
"│                    │  Views                                                  │"
"│                    │    1024                                                 │"
"│                    │                                                         │"
"│                    │  Featured        [x]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                           │"
"│                    │    2026-09-06T12:00:00Z                                 │"
"│                    │                                                         │"
"│                    │  Metadata                                               │"
"│                    │    {"pinned":true,"tags":["rust"]}                      │"
"│                    │                                                         │"
"│                    │  Notes                                                  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
