pressa-tui/tests/snapshots/editor_snapshots__frame_i_confirm_discard.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &discarding()).backend()"
---
"┌ pressa › Posts › Hello, world! ─────────────────────── ● unsaved · Ctrl+S ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │ ▸Title *                                                │"
"│                    │    Hello, world!                                        │"
"│ > Posts            │                                                         │"
"│                    │  Slug *                                                 │"
"│                    │    hello-world                                          │"
"│                    │       ┌─ Discard changes ──────────────────────┐        │"
"│                    │       │                                        │        │"
"│                    │       │  Discard unsaved changes?              │        │"
"│                    │       │  This cannot be undone.                │        │"
"│                    │       │                                        │        │"
"│                    │       │         y Discard    n Cancel          │        │"
"│                    │       └────────────────────────────────────────┘        │"
"│                    │    42                                                   │"
"│                    │                                                         │"
"│                    │  Featured        [ ]                                    │"
"│                    │                                                         │"
"│                    │  Published at                                 ↓ 1 more  │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ y Discard   n Cancel                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
