pressa-tui/tests/snapshots/editor_snapshots__frame_j_the_editor_at_the_minimum_size.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(60, 16, &new_post()).backend()"
---
"┌ pressa › Posts › New ────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────┤"
"│ Collections        │ ▸Title *                            │"
"│                    │    —                                │"
"│ > Posts            │                                     │"
"│                    │  Slug *                             │"
"│                    │    —                                │"
"│                    │                                     │"
"│                    │  Status *        ‹ — ›              │"
"│                    │                                     │"
"│                    │  Content                  ↓ 4 more  │"
"├────────────────────┴─────────────────────────────────────┤"
"│                                                          │"
"├──────────────────────────────────────────────────────────┤"
"│ Tab Next   Enter Edit   Ctrl+S Save   Esc Back           │"
"└──────────────────────────────────────────────────────────┘"
