pressa-tui/tests/snapshots/editor_snapshots__frame_k_the_list_once_n_and_enter_are_bound.snap
---
source: pressa-tui/tests/editor_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────────────────────────── 0 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE              STATUS             VIEWS            │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │                                                         │"
"│                    │   No records yet.  Press n to create the first one.     │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Edit   n New   Esc Back                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
